--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.1.1"
+    }
+
 }
 
 dependencies {
@@ -60,12 +67,16 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
     implementation "androidx.activity:activity-compose:1.4.0"
     implementation "androidx.compose.animation:animation:1.1.1"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "androidx.compose.ui:ui-test-junit4:1.1.1"
     implementation "androidx.compose.ui:ui-tooling:1.1.1"
-    implementation "androidx.navigation:navigation-compose:2.5.0-alpha04"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.3"
+    //implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha06"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    //androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+    //debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    //debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
+    implementation "androidx.compose.compiler:compiler:1.1.1"
 
     // Room
     implementation "androidx.room:room-runtime:2.4.2"
