--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,19 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.devtools.ksp' version '1.6.10-1.0.2' // Depends on your kotlin version
+
+}
+
+kotlin {
+    sourceSets {
+        debug {
+            kotlin.srcDir("build/generated/ksp/debug/kotlin")
+        }
+        release {
+            kotlin.srcDir("build/generated/ksp/release/kotlin")
+        }
+    }
 }
 
 android {
@@ -60,23 +73,22 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Compose dependencies
+    implementation "androidx.compose.compiler:compiler:1.1.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1"
     implementation "androidx.navigation:navigation-compose:2.5.0-alpha04"
-    implementation "androidx.compose.ui:ui:1.1.1"
     implementation "androidx.compose.material:material:1.1.1"
+    implementation "androidx.compose.ui:ui:1.1.1"
     implementation "androidx.compose.ui:ui-tooling-preview:1.1.1"
-    implementation "androidx.activity:activity-compose:1.4.0"
-    implementation "androidx.compose.animation:animation:1.1.1"
     implementation "androidx.compose.ui:ui-test-junit4:1.1.1"
     implementation "androidx.compose.ui:ui-tooling:1.1.1"
+    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation "androidx.compose.animation:animation:1.1.1"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.3"
     //implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha06"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     //androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
     //debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
     //debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
-    implementation "androidx.compose.compiler:compiler:1.1.1"
 
     // Room
     implementation "androidx.room:room-runtime:2.4.2"
@@ -99,4 +111,12 @@ dependencies {
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    //Navigation component
+    implementation("androidx.navigation:navigation-fragment-ktx:2.4.2")
+    implementation("androidx.navigation:navigation-ui-ktx:2.4.2")
+
+    //Compose Destinations
+    implementation 'io.github.raamcosta.compose-destinations:core:1.5.0-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.0-beta'
 }
