--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.room:room-common:2.4.2'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
     // Compose dependencies
     implementation "androidx.compose.compiler:compiler:1.1.1"
@@ -85,9 +84,8 @@ dependencies {
     implementation "androidx.compose.animation:animation:1.1.1"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.3"
+    implementation "androidx.compose.material:material-icons-extended:1.1.1"
     //implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.0-alpha06"
-    //androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
-    //debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
     //debugImplementation "androidx.compose.ui:ui-tooling:1.1.1"
 
     // Room
@@ -104,6 +102,8 @@ dependencies {
     // Coroutine Lifecycle Scopes
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-core-ktx:2.4.1"
 
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
@@ -119,4 +119,35 @@ dependencies {
     //Compose Destinations
     implementation 'io.github.raamcosta.compose-destinations:core:1.5.0-beta'
     ksp 'io.github.raamcosta.compose-destinations:ksp:1.5.0-beta'
+
+    //JUnit
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    kapt "androidx.room:room-compiler:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "androidx.room:room-testing:2.4.2"
+   testImplementation "junit:junit:4.13.2"
+    testImplementation "com.google.truth:truth:1.1.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "org.robolectric:robolectric:4.5.1"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
+    androidTestImplementation "com.google.truth:truth:1.1.2"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.1.1"
+
+
+    //MockK
+    //MockK Unit
+    testImplementation "io.mockk:mockk:1.12.3"
+    testImplementation "io.mockk:mockk-agent-jvm:1.12.3"
+    //MockK Instrumented
+    androidTestImplementation "io.mockk:mockk-android:1.12.3"
+    //androidTestImplementation "io.mockk:mockk-agent-jvm:1.12.3"
+
+    //Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
 }
